# MFSC

./: .gitignore  CMakeLists.txt  README.md  a.out  auth.cpp  authed_entry.cpp  authed_entry.h  build_atsic  client  client.cpp  client_authed_entry.cpp  create  cred_gen.cpp  encryption_utils.cpp  encryption_utils.h  filesystem_plan  memtest_steps  plan.txt  server  server.cpp  test  todo
demo/: note
include/: auth.h  authed_entry.h  read_write_handlers.h  server_logger.h
include/common/: SessionEnc.h  constants.h  encryption_utils.h
src/: a.out  auth.cpp  auth.h  authed_entry.cpp  authed_entry.h  client.cpp  encryption_utils.cpp  encryption_utils.h  server.cpp  test.cc
src/auth/: auth.cpp  auth.h
src/authed_entry/: authed_entry.cpp  authed_entry.h
src/client/: a.out  authed_entry.cpp  client.cpp
src/client/authed_entry/: authed_entry.cpp  authed_entry.h
src/encryption_utils/: SessionEnc.cpp  SessionEnc.h  encryption_utils.cpp  encryption_utils.h
src/server/: a.out  auth.cpp  read_write_handlers.cpp  server.cpp  server_logger.cpp
src/server/auth/: auth.cpp
src/server/read_write_handlers/: read_write_handlers.cpp  read_write_handlers.h
test_build/: client  server
tests/: 1.test  2.test  a.out  client_cerr_out  client_default.sh  client_out  gdb.sh  pswd_hasher.c  tester_main.sh
tests/test_output/: *.err  *.out
